[package]
authors = ["Altaflux"]
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]
description = "Gameboy emulator for the rp2350"
edition = "2021"
homepage = "https://github.com/Altaflux/gb-rp2350"
keywords = [
    "embedded",
    "hal",
    "raspberry-pi",
    "rp235x",
    "rp2350",
    "embedded-hal",
]
license = "MIT OR Apache-2.0"
name = "gb-rp2350"
repository = "https://github.com/Altaflux/gb-rp2350"
rust-version = "1.77"
version = "0.1.0"

[dependencies]
byte-slice-cast = { version = "1.2.2", default-features = false }
display-interface = "0.5"
embedded-graphics-core = "0.4.1"
embedded-graphics = "0.8.2"
#display-interface-spi = "0.5.0"
mipidsi = { version = "0.10.0", default-features = false }
gb-core = { git = "https://github.com/Altaflux/rust-gb.git", rev = "0504e7964eda437ccfdac72144db03d579d84eed", default-features = false }
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03"] }
embedded-io = "0.7.1"
# We aren't using this, but embedded-hal-bus 0.2 unconditionally requires atomics.
# Should be fixed in e-h-b 0.3 via https://github.com/rust-embedded/embedded-hal/pull/607
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
critical-section = { version = "1.2.0" }
defmt = "1.1.0"

embedded-sdmmc = { git="https://github.com/rust-embedded-community/embedded-sdmmc-rs.git", rev="f2b41b92269ccfcba9b2926cf1221d201ec55887", features = [], default-features = false }
embedded-alloc = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-dma = "0.2.0"
paste = "1.0.15"
const-lru = "1.0.0"
fugit = "0.3.6"

pio = "0.3.0"

rp235x-hal = { version = "0.4.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
    "defmt",
] }

defmt-serial = "0.13.0"
static_cell = "2.1.0"
panic-probe = { version = "1.0.0", features = ["defmt", "print-defmt"] }
const_env = "0.1.2"

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = [
    "macros",
] }
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
debug = false
debug-assertions = false
opt-level = 3
overflow-checks = true


[features]
ram_rom = []
flash_rom = []
psram_rom = []
